Related-Bug: #1647533 - Config Pages misalignment
1) In the Physical router - OVSDB Managed ToR tab TOR Agent name and TSN Name
was misaligned
2) Detail section in IPAM was misaligned.

--- a/webroot/common/ui/css/contrail.controller.css
+++ b/webroot/common/ui/css/contrail.controller.css
@@ -340,7 +340,7 @@ div.vis-network canvas{
     width:250px;
     padding-top:0px;}
 #prefix_limit{width:213px}
-#bgp-grid ul.item-list .key, #config-vn-list ul.item-list .key, #service-instances-grid ul.item-list .key{
+#bgp-grid ul.item-list .key, #config-vn-list ul.item-list .key, #config-ipam-list ul.item-list .key, #service-instances-grid ul.item-list .key{
     width:23% !important;
 }
 #bgp-grid ul.item-list .value, #service-instances-grid ul.item-list .value{
